# found-tools

./: .gitignore  CMakeLists.txt  README.md  install.sh  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: add_delta_distance_column.py  generate_images_and_plot_conic_points.py  plot_regression_comparison.py  print_delta_availability.py  produce_noisy_image.py  test.ipynb  test_add_point_noise.py  test_analysis_plots.py  test_column_summary_plot.py  test_plot_camera_ranges.py  test_plot_first_image.py
src/found_CLI_tools/attitude/: README.md  __init__.py  constants.py  main.py  transform.py
src/found_CLI_tools/edge_point_gen/: main.py  projection.py
src/found_CLI_tools/generatePoints/: __init__.py  conic.py
src/found_CLI_tools/generator/: __main__.py
src/found_CLI_tools/generator/common/: constants.py  eval.py
src/found_CLI_tools/generator/curve/: curve.py  spherical.py
src/found_CLI_tools/generator/image/: printer.py
src/found_CLI_tools/generator/spatial/: camera.py  coordinate.py
src/found_CLI_tools/geometry/: __init__.py  camera.cpp  rotation.py
src/found_CLI_tools/navigation_analysis/: README.md  __init__.py  constants.py  generic.py  generic_new.py  main.py  parametric.py  parametric_model.py
src/found_CLI_tools/noise_generator_image/: __main__.py  noise.py
src/found_CLI_tools/residual_analysis/: illumination_frame.py
src/found_CLI_tools/simulation/: generate-satellite-state.py
src/limb/calibrate/: main.py  transform.py
src/limb/simulation/: README.md  main.py
src/limb/simulation/analysis/: metrics.py  plot.py
src/limb/simulation/edge/: conic.py
src/limb/simulation/metadata/: df.py  orchestrate.py  state.py
src/limb/simulation/render/: conic.py
src/limb/utils/: _camera.py  plot.py
src/limb/validation_tool/: integration.py  universal_opnav_tester.py
src/test-generators/: README.md  point-generator.py
src/test-generators/output/: pointOutput.txt
src/validation_tool/: integration.py  universal_opnav_tester.py
tests/: __init__.py  conftest.py  smoke_test.py
tests/found_CLI_tools/: __init__.py
tests/found_CLI_tools/attitude/: __init__.py  test_attitude_integration.py  test_integration.py  test_transform.py
tests/found_CLI_tools/edge_point_gen/: test_projection.py  test_projection_integration.py
tests/found_CLI_tools/generator/: __init__.py  test_camera.py  test_coordinate.py  test_integration.py  test_spherical.py
tests/found_CLI_tools/navigation_analysis/: test_generic.py  test_main.py  test_model.py
tests/found_CLI_tools/noise_generator_image/: __init__.py  test_integration.py  test_noise.py
tests/limb/attitude/: test_integration.py  test_transform.py
tests/limb/simulation/: integration-test.py  test_edge_conic.py  test_orchestrate.py  test_render_conic.py  test_simulation.py
tests/limb/simulation/analysis/: test_metrics.py
tests/limb/simulation/metadata/: state-test.py  test_state.py
