[project]
name = "found-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "scipy>=1.16.3",
]

[project.scripts]
found-attitude = "found_CLI_tools.attitude.main:main"

[dependency-groups]
dev = ["pytest", "coverage"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

