[project]
name = "found-tools"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "scipy>=1.16.3",
    "opencv-python>=4.0.0",
    "numpy>=1.20.0",
    "pycairo>=1.20.0",
]

[project.scripts]
found-attitude = "found_CLI_tools.attitude.main:main"
noise-generator = "found_CLI_tools.noise_generator_image.cli:main"

[dependency-groups]
dev = ["pytest", "coverage"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

