[project]
name = "limb"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "scipy>=1.16.3",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[project.scripts]
limb_attitude = "limb.attitude.main:main"
limb_simulation = "limb.simulation.main:main"

[dependency-groups]
dev = ["pytest", "coverage"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

